Made all hyperlinks relative and fixed nav bar spacing in projects page

--- a/projects/projects.css
+++ b/projects/projects.css
@@ -23,11 +23,7 @@ p {
   text-align: left;
 }
 
-div.row {
-  padding: 20px;
-}
-
-div.col {
+.project {
   padding: 20px;
 }
 
